Added dropdowns and modified order modals and added some Junit test cases

--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -83,9 +83,11 @@
                 </div>
                 <div class="form-row">
                   <div class="col-5">
+                      <label for="exBrandInput">Current Brand</label>
                       <input type="text" class="form-control" name="exBrand" placeholder="exBrand" id="exBrandInput">
                   </div>
                   <div class="col-5">
+                      <label for="exCategoryInput">Current Category</label>
                       <input type="text" class="form-control" name="exCategory" placeholder="exCategory" id="exCategoryInput">
                   </div>
                 </div>
@@ -97,10 +99,12 @@
                 </div>
                 <div class="form-row">
                     <div class="col-5">
-                        <input type="text" class="form-control" name="brand" placeholder="Brand" id="brandInput">
+                        <label for="brandUpdateInput">New Brand</label>
+                        <input type="text" class="form-control" name="brand" placeholder="Brand" id="brandUpdateInput">
                     </div>
                     <div class="col-5">
-                        <input type="text" class="form-control" name="category" placeholder="Category" id="categoryInput">
+                        <label for="categoryUpdateInput">New Barcode</label>
+                        <input type="text" class="form-control" name="category" placeholder="Category" id="categoryUpdateInput">
                     </div>
                 </div>
               </form>
