--- a/src/main/webapp/html/product.html
+++ b/src/main/webapp/html/product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head th:replace="snippet.html :: name_head"></head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <nav th:replace="snippet.html :: name_app_navbar"></nav>
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
