--- a/src/main/webapp/html/logout.html
+++ b/src/main/webapp/html/logout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head th:replace="snippet.html :: name_head"></head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <div class="container">
         <!-- Top row with form-->
